Dialogs z-index fix
   - z-index for dialogs changed from 1050(default) to 1070,
     to overlap popovers with z-ndex: 1060

Closes-Bug: #1497889

--- a/nailgun/static/styles/main.less
+++ b/nailgun/static/styles/main.less
@@ -3008,6 +3008,7 @@ input[type=range] {
 
 .modal {
   color: @base-text-color;
+  z-index: 1070;
   .modal-dialog {margin-top: 6%;}
   .modal-title {
     font-size: @base-font-size + 6px;
